[project]
name = "synix-claude-proxy"
version = "0.1.0"
description = "Synix — pre-computes conversation summaries so Claude Code compaction is instant"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10,<4",
    "httpx[http2]>=0.27,<1",
    "httpx-sse>=0.4,<1",
    "trustme>=1.1,<2",
    "aiosqlite>=0.20,<1",
    "structlog>=24.1,<25",
    "pydantic-settings>=2.4,<3",
    "dnspython>=2.6,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-aiohttp>=1.0,<2",
    "respx>=0.21,<1",
    "coverage>=7,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbproxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
